--- a/bms-spring-boot-rest-jdbc-maven-project.zip_expanded/bms-spring-boot-rest-jdbc-maven-project/pom.xml
+++ b/bms-spring-boot-rest-jdbc-maven-project.zip_expanded/bms-spring-boot-rest-jdbc-maven-project/pom.xml
@@ -38,6 +38,16 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		    <version>2.2.0</version>
+		</dependency>
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-validation</artifactId>
+    	</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
