--- a/bms-spring-boot-rest-jdbc-maven-project.zip_expanded/bms-spring-boot-rest-jdbc-maven-project/src/main/resources/application.properties
+++ b/bms-spring-boot-rest-jdbc-maven-project.zip_expanded/bms-spring-boot-rest-jdbc-maven-project/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=9595
+
+logging.file.path=logs/
+logging.file.name=logs/app.log
+
+#logging.level.root=OFF
+#logging.level.org.springframework.boot=OFF
