--- a/bms-spring-boot-rest-jpa-maven-project.zip_expanded/bms-spring-boot-rest-jpa-maven-project/src/main/resources/application.properties
+++ b/bms-spring-boot-rest-jpa-maven-project.zip_expanded/bms-spring-boot-rest-jpa-maven-project/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=bms-spring-boot-rest-jpa-maven-project
 
 server.port=4444
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/book_management_system
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=validate
